Wed Feb 21 15:41:34 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreestore.c: removed signals.  Moved to inherit from
	GObject instead of GtkObject.

	* gtk/gtkliststore.c: ditto.

	* gtk/gtktreemodelsort.c: ditto.

	* gtk/gtktreemodel.c (gtk_tree_model_base_init): moved signals to
	GtkTreeModelIface, instead of in each model.

2001-02-21  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextbuffer.c (gtk_text_buffer_insert_child_anchor):
	unbreak this function

	* gtk/gtkentry.c: apply patch from Lee Mallabone to add object 
	properties

	* gtk/gtkcurve.c: apply patch from Lee Mallabone to add object
	properties

	* gtk/gtkcombo.c: apply patch from Lee Mallabone to add object 
	properties

	* gtk/gtkentry.c (gtk_entry_set_max_length): have this take -1 to
	mean unset the max length

Wed Feb 21 14:23:05 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_set_cell_data_func):
	Changed name to be set_cell_data_func to make it clear what
	the functino does.  Close bug #51069.

Tue Feb 20 16:49:00 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/testgtk.c (main): Remove turning on of profiling malloc,
	have memory actually freed.  Keeps box running longer.

2001-02-21  Alexander Larsson  <alexl@redhat.com>
	
        * gtk/gtkseparatormenuitem.[ch]:
	Added new menu separator item. The drawing and size handling
	is still done in GtkMenuItem, but the API is a bit more sane.
	
	* gtk/Makefile.am:
	Add gtkseparatormenuitem.[ch].

	* gtk/gtk.h:
	Add gtkseparatormenuitem.h.
	
	* gtk/gtkentry.c:
	* gtk/gtkmenufactory.c:
	* gtk/gtktextview.c:
	Use the new API for menu separators.
	
	* demos/gtk-demo/menus.c (create_menu):
	Add some GtkSeparatorMenuItem demo code.

2001-02-20  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkaspectframe.c: Convert to new property API, patch from 
	Lee Mallabone

	* gtk/gtkarrow.c: Convert to new property API, patch from 
	Lee Mallabone

Tue Feb 20 14:26:41 2001  Jonathan Blandford  <jrb@redhat.com>
